--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ajax sample</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+<div class="container mt-5">
+    <div class='text-center'>
+        <button class='btn btn-primary' id='populate'>Populate data</button>
+        <button class='btn btn-danger' id='clear'>Clear data</button>
+    </div>
 
-    <button id='populate'>Populate data</button>
-    <button id='clear'>Clear data</button>
-
-    <table border='1'>
+    <table class='table table-striped mt-3'>
         <thead>
             <tr>
                 <td>ID</td>
@@ -26,6 +29,7 @@
             </tr>
         </tbody>
     </table>
+</div>
     <!-- <form action="https://www.google.com">
         <button type="submit">Submit</button>       Here when you click submit google.com will load with page refresh. This should not happen. So ajax is used
     </form> -->
@@ -65,5 +69,8 @@
        
     
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+
 </body>
 </html>
